# FLOSS

./: .env.example  .gitattributes  .gitignore  .hc  .mcp.json  CLAUDE.md  EXECUTIVE-SUMMARY-AND-ACTION-PLAN.md  FLOSSI0ULLK_Master_Metaprompt_v1_3_1_Kernel.md  INTEGRATION-STATUS.md  LESSONS-LEARNED-Integration-Work.md  META_REFLEXIVE_PLANNING_ANALYSIS.md  MVP_PLAN.md  README.md  SDD-Master-Spec-0.22.md  flossi0ullk-landscape-recursive-analysis_3-24-26_perplexity_computer_used.md  index.html  package-lock.json  package.json  pprevious_working_task.md  resonance_mechanism_v2.md  shared-agent-memory-surface.json  shared-agent-surface.json  shared-ai-roster-surface.json  shared-context-surface.json  shared-hook-surface.json  shared-skill-surface.json  styles.css
ARF/: ADR-0-recognition-protocol.md  ADR-1.md  ADR-N-spec-driven-development.md  Advanced_Distributed_Systems_2025_State_of_Art_v2.md  Cargo.toml  EXECUTIVE_SUMMARY.md  README.md  SYMBOLIC_FIRST_CORE.md  __init__.py  advancedz_distributed_systemz_n_AI_architecture_2025SOTA.md  benchmark_embeddings.py  conversation_memory.py  embedding_frames_of_scale.py  flake.nix  requirements.txt  run_swarm_cli.py  setup-wsl-nix.sh  setup.py  test_breakthrough.py  test_human_coherence.py  test_validation_simple.py  walking_skeleton_validation.yaml
ARF/.cargo/: config.toml
ARF/adr/: ADR-0001-rfc-001.json  ADR-0002-rfc-001.json  ADR-0003-rfc-001.json  ADR-0004-rfc-002.json  ADR-0005-rfc-003.json  ADR-0006-rfc-good.json  ADR-0007-rfc-good.json  ADR-0008-rfc-bad.json  ADR-0009-rfc-bad.json  ADR-0010-rfc-001.json  ADR-0011-rfc-002.json  ADR-0012-rfc-003.json  ADR-0013-rfc-good.json  ADR-0014-rfc-good.json  ADR-0015-rfc-bad.json  ADR-0016-rfc-bad.json  ADR-0017-rfc-001.json  ADR-0018-rfc-002.json  ADR-0019-rfc-003.json  ADR-0020-rfc-good.json  ADR-0021-rfc-good.json  ADR-0022-rfc-bad.json  ADR-0023-rfc-bad.json  ADR-0024-rfc-001.json  ADR-0025-rfc-001.json  ADR-0026-rfc-002.json  ADR-0027-rfc-003.json  ADR-0028-rfc-good.json  ADR-0029-rfc-good.json  ADR-0030-rfc-bad.json  ADR-0031-rfc-bad.json  ADR-0032-rfc-integrated.json
ARF/cli/: __init__.py  benchmark.py  main.py  memory.py  ontology.py  swarm.py
ARF/config/: triple_patterns.yaml
ARF/dev/: CONSOLIDATED_STATUS_2025_11_21.md  METALOOP_v0.1_IMPLEMENTATION_ROADMAP.md  ROADMAP_PHASE4_PLUS.md
ARF/dev/critiques/: CRITIQUE_MetaLoop_v0.1_Specs_2025-11-16.md
ARF/dev/distillations/: DISTILLATION_MetaLoop_v0.1_Bootstrap_2025-11-16.md
ARF/dev/reports/: migration_report.json  migration_report.md
ARF/dev/specs/: EPISTEMIC_TAG_SCHEMA_v0.1.md  PLAN_DNA_SPECIFICATION_v0.1.md
ARF/dev/tasks/phase6/: task1_tracing.md  task2_metrics.md  task3_debug_tools.md
ARF/dnas/rose_forest/workdir/: dna.yaml
ARF/dnas/rose_forest/zomes/: README.md
ARF/docs/: arf_sdd_master_spec.md  moararchitecture.md  pieces_arf_flossioullk_ecosystem_development_summary.md  self-transcendance.md
ARF/docs/archive/: README.md
ARF/governance/: __init__.py  budget.py
ARF/in.finite-nrg/: COMPLETE_SPECIFICATION.md  EXECUTIVE_SUMMARY.md
ARF/in.finite-nrg/infinity-bridge/examples/: demo.py
ARF/in.finite-nrg/infinity-bridge/orchestrator/: discovery.py  holochain_connector.py  infinity_cli.py  mcp_server.py
ARF/in.finite-nrg/infinity-bridge/tests/: test_protocol.py
ARF/memory/test-agent-1/: adrs.json  embeddings.json  understandings.json
ARF/memory/test-ai/: embeddings.json  understandings.json
ARF/memory/test-human/: adrs.json  embeddings.json  understandings.json
ARF/memory/test-persistence-agent/: embeddings.json  understandings.json
ARF/metacoordinator/: README.md  consensus.py  context_sync.py  preview_consensus.py  test_consensus.py  test_stress.py  test_sync.py
ARF/ontology/: __init__.py  mixing.py  patterns.py  predicates.py
ARF/pwnies/: check_setup.py  embedding_frames_of_scale.py  run_swarm.py
ARF/pwnies/benchmarks/: benchmark_suite.py  parameter_sweep.py
ARF/pwnies/desktop_pony_swarm/: __init__.py  holochain_connector.py
ARF/pwnies/desktop_pony_swarm/bridge/: __init__.py  (+1 more)
ARF/pwnies/tests/: test_performance.py
ARF/scripts/: ipfs_download.py  ipfs_upload.py  merge_phase.sh  migrate_to_symbolic.py  rollback_migration.py  sync-to-wsl.sh  wsl-dev.sh
ARF/storage/ipfs/: adapter.py
ARF/tests/: conftest.py  test_budget.py  test_committee.py  test_committee_validation.py  test_conversation_memory.py  test_conversation_memory_composition.py  test_embedding_composition.py  test_embedding_frames.py  test_migration.py  test_patterns.py  verify_patterns.py
ARF/tests/integration/: test_holochain_python_bridge.py  test_multi_agent_memory.py  test_ontology_pipeline.py  test_swarm_sensors.py
ARF/tests/tryorama/: consent_gate.test.ts  fix-libsodium-esm.mjs  package-lock.json  package.json  python_roundtrip.test.ts  rose_forest.test.ts  spec_compliance.test.ts  start_conductor.js  substrate_bridge.test.ts  triple_ontology.test.ts  vitest.config.ts
ARF/tests/validation/: test_walking_skeleton.py
ARF/validation/: __init__.py  agent_pool.py  committee.py  models.py
ARF/workdir/: happ.yaml
(+750 files in other folders)
