[workspace]
members = [
    "dnas/rose_forest/zomes/integrity",
    "dnas/rose_forest/zomes/coordinator",
]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.1"
hdk = "=0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rose_forest_integrity = { path = "dnas/rose_forest/zomes/integrity" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
