[package]
name = "identity_coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
hdk = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
identity_integrity = { path = "../identity_integrity" }

[lib]
crate-type = ["cdylib", "rlib"]
